--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
       }
     },
     "testMatch": [
-      "<rootDir>/src/__tests__/*.spec.+(ts|tsx|js)"
+      "<rootDir>/src/__tests__/**/*.spec.+(ts|tsx|js)"
     ],
     "preset": "ts-jest"
   },
