--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "typescript": "^4.3.4"
   },
   "dependencies": {
+    "base64-arraybuffer": "^0.2.0",
     "tslib": "^2.3.0"
   },
   "author": "Yoshihiro Seki",
