--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     },
     "globals": {
       "ts-jest": {
-        "tsConfig": "tsconfig.json"
+        "tsconfig": "tsconfig.json"
       }
     },
     "testMatch": [
@@ -44,13 +44,13 @@
     "preset": "ts-jest"
   },
   "devDependencies": {
-    "@types/jest": "^26.0.23",
-    "@types/node": "^15.12.4",
-    "jest": "^26.6.3",
+    "@types/jest": "^26.0.24",
+    "@types/node": "^16.4.1",
+    "jest": "^27.0.6",
     "npm-run-all": "^4.1.5",
     "rimraf": "^3.0.2",
-    "ts-jest": "^26.5.6",
-    "typescript": "^4.3.4"
+    "ts-jest": "^27.0.4",
+    "typescript": "^4.3.5"
   },
   "dependencies": {
     "base64-arraybuffer": "^0.2.0",
