--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "isomorphic-fs",
-  "version": "0.0.54",
-  "description": "Isomorphic Filesystem",
+  "name": "univ-fs",
+  "version": "0.0.0",
+  "description": "Universal Filesystem",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
   "typings": "lib/index.d.ts",
@@ -49,7 +49,7 @@
     "jest": "^27.0.6",
     "npm-run-all": "^4.1.5",
     "rimraf": "^3.0.2",
-    "ts-jest": "^27.0.4",
+    "ts-jest": "^27.0.5",
     "typescript": "^4.3.5"
   },
   "dependencies": {
