--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
   },
   "devDependencies": {
     "@types/jest": "^27.0.1",
-    "@types/node": "^16.6.1",
+    "@types/node": "^16.6.2",
     "jest": "^27.0.6",
     "npm-run-all": "^4.1.5",
     "rimraf": "^3.0.2",
@@ -53,10 +53,9 @@
     "typescript": "^4.3.5"
   },
   "dependencies": {
-    "base64-arraybuffer": "^1.0.1",
     "sha256-uint8array": "^0.10.3",
-    "text-encoding-shim": "^1.0.5",
-    "tslib": "^2.3.1"
+    "tslib": "^2.3.1",
+    "univ-conv": "^0.0.3"
   },
   "author": "Yoshihiro Seki",
   "license": "MIT"
