--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "univ-fs",
   "version": "0.2.15",
-  "description": "Universal Filesystem Core",
+  "description": "The universal Filesystem API core",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
   "typings": "lib/index.d.ts",
@@ -55,7 +55,7 @@
   "dependencies": {
     "sha256-uint8array": "^0.10.3",
     "tslib": "^2.3.1",
-    "univ-conv": "^0.1.16"
+    "univ-conv": "^0.1.17"
   },
   "author": "Yoshihiro Seki",
   "license": "MIT"
