--- a/package.json
+++ b/package.json
@@ -46,8 +46,13 @@
   "devDependencies": {
     "@types/jest": "^27.0.2",
     "@types/node": "^16.11.6",
+    "@typescript-eslint/eslint-plugin": "^5.3.0",
+    "@typescript-eslint/parser": "^5.3.0",
+    "eslint": "^8.1.0",
+    "eslint-config-prettier": "^8.3.0",
     "jest": "^27.3.1",
     "npm-run-all": "^4.1.5",
+    "prettier": "^2.4.1",
     "rimraf": "^3.0.2",
     "ts-jest": "^27.0.7",
     "typescript": "^4.4.4"
@@ -55,7 +60,7 @@
   "dependencies": {
     "sha256-uint8array": "^0.10.3",
     "tslib": "^2.3.1",
-    "univ-conv": "^0.3.1"
+    "univ-conv": "^0.3.2"
   },
   "author": "Yoshihiro Seki",
   "license": "MIT"
