--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,5 +12,6 @@
     "project": "./tsconfig.json"
   },
   "env": { "browser": true, "node": true, "es6": true },
+  "ignorePatterns": ["**/__tests__/*.ts"],
   "rules": {}
 }
