--- a/package.json
+++ b/package.json
@@ -16,32 +16,22 @@
     "universal"
   ],
   "scripts": {
-    "clean": "rimraf ./lib",
+    "clean": "rimraf ./lib ./tsconfig.tsbuildinfo",
     "compile": "tsc",
     "build": "npm-run-all clean compile",
     "npm-version": "npm version patch",
     "npm-publish": "npm publish",
-    "release": "npm-run-all clean compile npm-version npm-publish",
-    "test": "jest --runInBand"
+    "release": "npm-run-all build npm-version npm-publish",
+    "jest": "jest --runInBand",
+    "test": "npm-run-all compile jest"
   },
   "jest": {
     "moduleFileExtensions": [
-      "js",
-      "ts",
-      "tsx"
+      "js"
     ],
-    "transform": {
-      "^.+\\.(ts|tsx)$": "ts-jest"
-    },
-    "globals": {
-      "ts-jest": {
-        "tsconfig": "tsconfig.json"
-      }
-    },
     "testMatch": [
-      "<rootDir>/src/__tests__/**/*.spec.+(ts|tsx|js)"
-    ],
-    "preset": "ts-jest"
+      "<rootDir>/lib/__tests__/**/*.spec.js"
+    ]
   },
   "devDependencies": {
     "@types/jest": "^27.4.1",
@@ -54,13 +44,12 @@
     "npm-run-all": "^4.1.5",
     "prettier": "^2.6.2",
     "rimraf": "^3.0.2",
-    "ts-jest": "^27.1.4",
     "typescript": "^4.6.3"
   },
   "dependencies": {
     "sha256-uint8array": "^0.10.3",
     "tslib": "^2.3.1",
-    "univ-conv": "^0.7.15"
+    "univ-conv": "^0.7.16"
   },
   "author": "Yoshihiro Seki",
   "license": "MIT"
