--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
   "compilerOptions": {
     "target": "esnext",
     "lib": ["ES2017", "DOM"],
+    "incremental": true,
     "module": "commonjs",
     "declaration": true,
     "declarationMap": true,
@@ -29,5 +30,5 @@
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true
   },
-  "exclude": ["lib", "node_modules", "src/__tests__/*.spec.ts"]
+  "exclude": ["lib", "node_modules"]
 }
